--- a/src/pages/Carousel.css
+++ b/src/pages/Carousel.css
@@ -5,6 +5,7 @@
     height: 100%;
   }
   
+
   .carousel-image {
     width: 40vw;
     height: 40vh;
@@ -33,3 +34,10 @@
     color:white
   }
   
+  @media(max-width:576px){  
+    .carousel-image {
+      width: 100%;
+      height: 40vh;
+      object-fit: cover;
+    }
+  }
