--- a/src/pages/Carousel.css
+++ b/src/pages/Carousel.css
@@ -36,8 +36,11 @@
   
   @media(max-width:576px){  
     .carousel-image {
-      width: 100%;
+      width: 80%;
       height: 40vh;
       object-fit: cover;
+    }
+    .carousel-container{
+      justify-content: center;
     }
   }
