--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -320,3 +320,13 @@ footer {
 .footer-bottom {
   background-color: $dark;
 }
+
+.satvik{
+  background: #444444;
+  border: 8px;
+  color: white;
+  padding: 8px 12px;
+  font-weight: 500;
+  border-radius: 8px;
+  
+}
